--- a/client/templates/posts/post_form.html
+++ b/client/templates/posts/post_form.html
@@ -24,7 +24,7 @@
             <div class="row">
               <div class="input-field col s12">
                 <input name="url" id="url" type="text"/>
-                <label for="url" class="active">Website</label>
+                <label for="url" class="active">Website (without http://)</label>
               </div>
             </div>
           </div>
