--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -4,8 +4,10 @@
       <div class="nav-wrapper teal darken-3 z-depth-1">
         <a href="/" class="brand-logo center">Class</a>
         <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li>{{> atNavButton}}</li>
+        </ul>
         <ul class="right">
-           <li>{{> atNavButton}}</li>
           {{#if currentUser}}
          
             <li>{{> notifications}}</li>
@@ -13,6 +15,7 @@
         </ul>
         <ul class="side-nav" id="slide-out">
           <li>{{> searchbar}}</li>
+          <li>{{> atNavButton}}</li>
         </ul>
       </div>
     </nav>
